<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16">

    <EditText
        android:id="@+id/et_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name" />

    <EditText
        android:id="@+id/et_manager_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:hint="@string/manager_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:hint="@string/role" />

    <Button
        android:id="@+id/b_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/submit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/submit_null_note" />

    <Button
        android:id="@+id/b_submit_null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/submit_null" />
</LinearLayout>