<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16">

    <TextView
        android:id="@+id/tv_predicted_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Your predicted salary is : Rs 112452" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/enter_your_feedback" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/outside_the_range" />

    <RadioGroup
        android:id="@+id/rg_outside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_higher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/higher" />

        <RadioButton
            android:id="@+id/rb_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lower" />

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inside_the_range" />

    <RadioGroup
        android:id="@+id/rg_higher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_higher_predicted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/higher_than_predicted" />

        <RadioButton
            android:id="@+id/rb_lower_predicted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lower_than_predicted" />

    </RadioGroup>

    <Button
        android:id="@+id/b_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>